...
            "state": "translated",
            "value": "在 Markdown 文件顶部添加 YAML 元数据"
          }
        }
      }
    },
    "Adjust Health Permissions": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Gesundheitsberechtigungen anpassen"
          }
...
            "state": "translated",
            "value": "在 GitHub 上提交 Issue"
          }
        }
      }
    },
    "Open Health App": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Health-App öffnen"
          }
...
            "state": "translated",
            "value": "查看"
          }
        }
      }
    },
    "View Exported File": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Exportierte Datei anzeigen"
          }
...
